change page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite App</title>
+    <title>Dacoid Assignment</title>
   </head>
   <body class="h-[100dvh] overflow-hidden">
     <!-- step 1 -->
